<resources>
    <string name="app_name">BumpPic</string>
    <string name="home">首页</string>
    <string name="recommended">推荐</string>
    <string name="pengpeng">碰一碰</string>
    <string name="social">社交圈</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="login_san_msg">通过第三方账号登陆</string>
    <string name="email_phone">邮箱/手机号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="browse_idle">随意浏览</string>
    <string name="other_login_way">其他登陆方式</string>
    <string name="weixin">微信</string>
    <string name="title_activity_activity_start">ActivityStart</string>
    <string name="title_activity_activity_register">ActivityRegister</string>
    <string name="register"><![CDATA[  注册]]></string>
    <string name="confirm_password">确认密码</string>
    <string name="email_phone_msg">请输入邮箱或手机号</string>
    <string name="password_msg">请输入6-20位密码</string>
    <string name="recent">最近</string>
    <string name="hot">热门</string>
    <string name="specil_attation">特别关注</string>
    <string name="send">发送</string>
    <string name="mine">我的</string>
    <string name="pengyipeng">碰一碰</string>
    <string name="collect">我的收藏</string>
    <string name="footprint">我的足迹</string>
    <string name="send_picture_hint">轻触图片以发送</string>
    <string name="filter">滤镜</string>
</resources>
